--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,40 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>r0bs tasks</title>
+    <style>
+      #appload {
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;
+        z-index: 9999999999;
+        text-align: center;
+      }
+      #loader {
+          border: 7px solid #f3f3f3; /* Light grey */
+          border-top: 7px solid #337ab7; /* Blue */
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+          margin: -25px 0 0 -25px;
+          overflow: visible;
+          display: inline-block;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          animation: spin 2s linear infinite;
+      }
+      @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+      }
+    </style>
   </head>
   <body>
+
+    <div id="appload">
+      <div id="loader"></div>
+    </div>
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
