made rendering fast by using props comparisons inside shouldComponentUpdate in server components

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     -->
     <title>r0bs tasks</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       #appload {
         box-sizing: border-box;
         height: 100%;
