--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://apis.google.com/js/api.js"></script>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico?v=0">
+    <link href="https://fonts.googleapis.com/css?family=Allan|Londrina+Shadow|Maven+Pro:400,700|Megrim|Offside|Space+Mono:400,700" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -14,7 +16,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>r0bs tasks</title>
+    <title>tasg.one Task Manager</title>
     <style>
       * {
         box-sizing: border-box;
